# sudoku_rust

./: .gitignore  Cargo.toml  Makefile  README.md  README_PYPI.md  make_env  make_env.ps1  make_env.sh  mypy.ini  pyproject.toml  ruff.toml  sample.ipynb  sample.py  sudoku_rust.pyi  test.ipynb  test.py
.github/workflows/: CI.yml
data/: bad_1.csv  badbad.csv  easy.csv  evil_2.csv  evil_3.csv  hard.csv
py/: sample.ipynb  sample.py
src/: bruteforce.rs  lib.rs  main.rs  solve.rs  sudoku.rs  wrap_bruteforce.rs  wrap_sudoku.rs
src/bruteforce/: matrix.rs
src/bruteforce/matrix/: bitmap.rs
src/solve/: matrix.rs
src/solve/matrix/: bitmap.rs
src/sudoku/: matrix.rs
src/sudoku/matrix/: bitmap.rs  bmp.rs  range.rs
sudoku_rust/: __init__.py  sudoku_rust.pyi
test/: test_solve.py
tests/: test_solve.py
