[package]
name = "sudoku_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sudoku_rust"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.41"
numpy = "0.24.0"
pyo3 = "0.24.2"
