[package]
name = "sudoku_rust"
version = "1.0.2"
authors = ["Yasushi Iwaki <yasushi.iwaki@gmail.com>"]
edition = "2024"
description = "A Sudoku solver implemented in Rust and exposed to Python via PyO3."
readme = "README.md"
license = "MIT"
repository = "https://github.com/yiwaki/sudoku_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sudoku_rust"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.41"
numpy = "0.28.0"
pyo3 = "0.28.3"
